--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@alchemy/aa-alchemy": "^0.1.0",
     "@alchemy/aa-core": "^0.1.0",
     "@t3-oss/env-nextjs": "^0.7.0",
+    "alchemy-sdk": "^2.10.1",
     "magic-sdk": "^20.1.1",
     "next": "13.5.4",
+    "random-avatar-generator": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "viem": "^1.16.0",
