--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@alchemy/aa-accounts": "^0.1.0",
     "@alchemy/aa-alchemy": "^0.1.0",
     "@alchemy/aa-core": "^0.1.0",
+    "@aws-sdk/client-s3": "^3.485.0",
     "@t3-oss/env-nextjs": "^0.7.0",
     "alchemy-sdk": "^2.10.1",
     "magic-sdk": "^20.1.1",
