--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ ALCHEMY_KEY=<YOUR_ALCHEMY_KEY>
 NEXT_PUBLIC_MAGIC_API_KEY=<YOUR_MAGIC_API_KEY>
 ALCHEMY_RPC_URL=<YOUR_ALCHEMY_RPC_URL>
 NEXT_PUBLIC_ALCHEMY_GAS_MANAGER_POLICY_ID=<YOUR_ALCHEMY_GAS_MANAGER_POLICY_ID>
+S3_BUCKET=<4EVERLAND_S3_BUCKET>
+S3_ACCESS_KEY=<4EVERLAND_S3_ACCESS_KEY>
+S3_SECRET_KEY=<4EVERLAND_S3_ACCESS_SECRET_KEY>
